# PetaRabbit

./: .gitignore  Algebre.cpp  Algebre.h  CMakeLists.txt  Cycle.cpp  Cycle.h  Dynamicien.cpp  Dynamicien.h  Exemples.cpp  Exemples.h  Julia.cpp  Julia.h  Mandelbrot.cpp  Mandelbrot.h  Moteur.cpp  Moteur.h  Parametres.cpp  Parametres.h  README.md  main.cpp
webservice/: .gitignore  main.py
webservice/html/: index.html
